# shuffleboard-camera

./: .gitignore  package-lock.json
camera/: .gitignore  README.md  pyproject.toml
camera/shuffleboard/: base_logger.py  capture.py  get_calibration_image.py  get_colour_masks.py  get_disc_positions.py  image_utils.py  photo.py  shuffleView.py  socket.py  sockets.py  utils.py  visualise_calibration_coordinates.py
camera/test/: test_base.py  test_capture.py  test_get_calibration_image.py  test_photo.py
web/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.server.json  vite.config.ts
web/backend/: gitpull.sh  index.ts  start_browser.sh  start_camera.sh
web/backend/controllers/: game-mode.ts
web/backend/services/: game-mode-service.ts
web/backend/websocket/: calculateDiscPosition.ts  shortCircuit.ts  websocket.ts  zoneOfControl.ts
web/constants/: constants.ts
web/frontend/: index.html
web/frontend/public/models/: blue_disc.mtl  blue_disc.vox  board.mtl  board.vox  red_disc.mtl  red_disc.vox
web/frontend/src/: App.tsx
web/frontend/src/api/: game-mode.ts
web/frontend/src/calibration/: Calibrate.tsx
web/frontend/src/game-mode/: GameModeSelect.tsx
web/frontend/src/visualisation/: BoardView.tsx
web/types/: game-modes.ts  types.ts
